# --

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  orchestrator.py  planner.py
backend/app/api/: artifacts.py  datasets.py  deps.py  llm.py  projects.py  runs.py
backend/app/artifacts/: registry.py
backend/app/core/: config.py  llm.py
backend/app/datasets/: __init__.py  ingestion.py  profiler.py  registry.py
backend/app/execution/: __init__.py  local_python.py  runtime.py
backend/app/storage/: __init__.py  duckdb.py  models.py  sqlite.py
backend/tests/: conftest.py  test_artifacts_api.py  test_config.py  test_dataset_upload_api.py  test_llm_provider.py  test_local_python_runtime.py  test_profiler.py  test_project_api.py  test_run_orchestrator_api.py  test_runs_api.py
docs/superpowers/plans/: 2026-07-05-phase-1-backend-foundation.md  2026-07-05-phase-2-run-orchestrator.md  2026-07-05-phase-3-local-python-runtime.md  2026-07-05-phase-4-run-execution-integration.md  2026-07-05-phase-5-run-orchestrator.md  2026-07-05-phase-6-artifact-store.md  2026-07-05-phase-7-llm-provider-adapter.md
docs/superpowers/specs/: 2026-07-05-data-science-agent-design.md
