[project]
name = "data-science-agent-backend"
version = "0.1.0"
description = "Local backend for a hybrid data science agent workspace"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "pandas>=2.2.0",
  "python-multipart>=0.0.9",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
